# app/routes/district.routes.js
@@ -6,23 +6,23 @@ const cacheResponse = require('middleware/cacheMiddleware');
 const router = express.Router();
 
 router.get(
-  '/distritos',
+  '/districts',
   queryParser,
   cacheResponse({
     key: (req) =>
-      `distritos:sortField=${req.processedQuery.sortField}:sortOrder=${req.processedQuery.sortOrder}:page=${req.processedQuery.page}:limit=${req.processedQuery.limit}`,
+      `districts:sortField=${req.processedQuery.sortField}:sortOrder=${req.processedQuery.sortOrder}:page=${req.processedQuery.page}:limit=${req.processedQuery.limit}:name=${req.processedQuery.name || ''}`,
     ttl: 3600, // one hour
   }),
   districtController.getDistricts
 );
 router.get(
-  '/distritos/:id',
+  '/districts/:id',
   cacheResponse({
-    key: (req) => `distritos:id=${req.params.id}`,
+    key: (req) => `districts:id=${req.params.id}`,
     ttl: 3600, // one hour
   }),
   districtController.getDistrictById
 );
-// router.get('/distritos/:name', districts.getLngLat);
+// router.get('/districts/:name', districts.getLngLat);
 
 module.exports = router;
